// Vitest Snapshot v1

exports[`test select example 1`] = `
"<div class=\\"app-type\\" data-v-137f5c44=\\"\\">基本使用</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">朴素模式</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon var-select--non-hint\\"></div>
    <div class=\\"var-select__wrap var-select--non-hint\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis var-select--placeholder-non-hint\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon var-select--non-hint\\">
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">文本关联值</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"relation\\" data-v-137f5c44=\\"\\">当前选择的是: </div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">禁用</div>
<div class=\\"var-select var--box var-select--disabled\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller var-select--disabled\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select var-select--disabled\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis var-select--disabled\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line var-select--line-disabled\\">
    <div class=\\"var-select__dot var-select--line-disabled\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">只读</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">可清除</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">显示图标</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-plus prepend-icon\\" style=\\"transition: transform 0ms;\\" data-v-137f5c44=\\"\\"></i></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-minus append-icon\\" style=\\"transition: transform 0ms;\\" data-v-137f5c44=\\"\\"></i></div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">多选</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
          <div>
            <div class=\\"var-select__values\\"></div>
          </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
        </div><label class=\\"var-select__placeholder var--ellipsis\\">请选择多个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">纸片风格的多选</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
          <div>
            <div class=\\"var-select__chips\\"></div>
          </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
        </div><label class=\\"var-select__placeholder var--ellipsis\\">请选择多个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">单选值校验</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\">请选择一个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-137f5c44=\\"\\">多选值校验</div>
<div class=\\"var-select var--box\\" data-v-137f5c44=\\"\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
          <div>
            <div class=\\"var-select__values\\"></div>
          </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
        </div><label class=\\"var-select__placeholder var--ellipsis\\">请选择多个选项</label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"space\\" data-v-137f5c44=\\"\\"></div>"
`;

exports[`test select focus & blur methods 1`] = `
"<div class=\\"var-select var--box\\">
  <div class=\\"var-select__controller var-select--focus\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow var-select--arrow-rotate\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis var-select--focus var-select--placeholder-hint\\"></label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot var-select--spread\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 2`] = `
"<div class=\\"var-select var--box\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis\\"></label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select hint to be false 1`] = `
"<div class=\\"var-select var--box\\">
  <div class=\\"var-select__controller\\">
    <div class=\\"var-select__icon var-select--non-hint\\"></div>
    <div class=\\"var-select__wrap var-select--non-hint\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis var-select--placeholder-hidden var-select--placeholder-non-hint\\"></label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon var-select--non-hint\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line\\">
    <div class=\\"var-select__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select validation 1`] = `
"<div class=\\"var-select var--box\\">
  <div class=\\"var-select__controller var-select--error\\">
    <div class=\\"var-select__icon\\"></div>
    <div class=\\"var-select__wrap\\">
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__select var-select--error\\" style=\\"text-align: left;\\"><span></span><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i></div><label class=\\"var-select__placeholder var--ellipsis var-select--error\\"></label>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
    <div class=\\"var-select__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-select__line var-select--line-error\\">
    <div class=\\"var-select__dot var-select--line-error\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">您必须选择一个</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;
